# PyKatsuyou

./: .gitignore  LICENSE  README.md  setup.cfg
.github/: FUNDING.yml
src/pykatsuyou/: __init__.py  cli.py  dataframes.py  exceptions.py  godan.py  iAdj.py  ichidan.py  irregulars.py  naAdj.py  pykatsuyou.py
tests/: cli_test.py  godan_test.py  ichidan_test.py  pykatsuyou_test.py
