[metadata]
name = PyKatsuyou
version = 1.0.1
author = Justin Lukasik
author_email = jus10luka@gmail.com
maintainer = Smashinfries
description = A Japanese inflections tool 
long_description = file: README.md
long_description_content_type = text/markdown
keywords = japanese, inflections, conjugation
url = https://github.com/SmashinFries/PyKatsuyou
project_urls =
    Bug Tracker = https://github.com/SmashinFries/PyKatsuyou/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: Education
    Natural Language :: Japanese
    Topic :: Text Processing :: Linguistic

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.6
install_requires = 
    pandas
    igo-python
    jaconv
    tabulate

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    pykatsuyou = pykatsuyou.cli:main